<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 andryr
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Harmony Music Player</string>
    <string name="titles">Titles</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="close">Close</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="reorder">Reorder</string>
    <string name="custom">Custom</string>
    <string name="bass_boost">Bass boost</string>
    <string name="new_playlist">New playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="create_playlist">Create playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="queue">Queue</string>
    <string name="context_menu_description">Contextual Menu</string>
    <string name="action_add_to_queue">Add to queue</string>
    <string name="unknown_album">Unknown album</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="action_set_as_next_track">Next track</string>
    <string name="about">About</string>



    <plurals name="albums_count">

        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
        -->
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>

    <plurals name="track_count">


        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>

    <string name="view_queue">View queue</string>
    <string name="equalizer">Equalizer</string>
    <string name="action_equalizer">Equalizer</string>
    <string name="title_activity_music_picker">Pick music</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="genre">Genre</string>
    <string name="edit_tags">Edit tags</string>
    <string name="action_edit_tags">Edit tags</string>
    <string name="track_number">Track number</string>
    <string name="tags_edition_failed">Tags edition failed</string>
    <string name="year">Year</string>
    <string name="action_search">Search</string>
    <string name="no_results">No results</string>
    <string name="blue_grey">Blue grey theme</string>
    <string name="blue_theme">Blue theme</string>
    <string name="choose_a_color">Choose a color</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="pref_theme_summary">Choose a theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="choose_playlist">Choose a playlist</string>
    <string name="pref_theme_base_title">Base theme</string>
    <string name="touch_to_select_a_song">Touch to select a song</string>
    <string name="no_song_selected">No song selected</string>
    <string name="light" translatable="false">Light</string>
    <string name="dark" translatable="false">Dark</string>
    <string name="clear_image_cache">Clear image cache</string>
    <string name="cache_cleared_message">Cache cleared !</string>
    <string name="now_playing">Now playing</string>
    <string name="title_activity_playback">PlaybackActivity</string>
    <string name="favorites">Favorites</string>
    <string name="most_played">Most played</string>
    <string name="action_favorite">Add to favorites</string>
    <string name="loading">Loading...</string>
    <string name="adding_songs_to_playlist">Adding songs to the playlist</string>
    <string name="favorites_text">Songs that you really like.</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="listen">Listen</string>
    <string name="more">More</string>
    <string name="dialog_mb_image_message">Download image from musicbrainz ?</string>
    <string name="error_not_found">No suitable image found</string>
    <string name="error_download_failed">Download failed</string>
    <string name="error">Error</string>
    <string name="action_download">Download an image</string>
    <string name="permission">Permission</string>
    <string name="permission_read_external_storage">The app must be able to read the external storage.</string>
    <string name="permission_write_external_storage">The app must be able to read from external storage in order to save downloaded artworks.</string>
    <string name="permission_read_phone_state">It is recommended (but not necessary) to let the app have the "READ_PHONE_STATE". This allows the player to pause when it detects an incoming call.</string>
    <string name="toast_crash">An error occured. A report will be sent to the developer.</string>
    <string name="dark_blue_grey_theme">Dark blue grey theme</string>
    <string name="navigation">Navigation</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="sleep_timer_dialog_title">Set timer</string>
    <string name="sleep_timer_dialog_message">Set timer or cancel current</string>
    <string name="action_set_timer">Set timer</string>
    <string name="action_cancel_current">Cancel current</string>
    <string name="back">Back</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="artist_image">Artist image</string>
    <string name="pref_use_free_artworks_title">Use free artworks (developers only)</string>
    <string name="pref_use_free_artworks_summary_on">Use free artworks (not recommended).</string>
    <string name="pref_use_free_artworks_summary_off">Use regular artworks (recommended).</string>
    <string name="category_look_title">Look</string>
    <string name="category_images_title">Images</string>
    <string name="category_other_title">Other</string>
</resources>