<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_theme_base"
        android:title="@string/pref_theme_base_title"
        android:dialogTitle="@string/pref_theme_base_title"
        android:entries="@array/pref_theme_base"
        android:entryValues="@array/pref_theme_base" />
    <com.andryr.musicplayer.preferences.ThemeDialog
        android:key="pref_theme"
        android:title="@string/pref_theme_title"
        android:summary="@string/pref_theme_summary"
        android:dialogMessage="@string/choose_a_color"/>
    <Preference android:title="@string/about" >
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="com.andryr.musicplayer"
            android:targetClass="com.andryr.musicplayer.preferences.AboutActivity" />
    </Preference>
</PreferenceScreen>