<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="org.oucho.musicplayer.preferences.ThemePreference">

    <ImageView android:id="@+id/original_green_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:src="@drawable/theme_original_green_button_normal"
        android:scaleType="fitCenter"
        android:contentDescription="@string/dark_blue_grey_theme"/>

    <ImageView android:id="@+id/red_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:src="@drawable/theme_red_button_normal"
        android:scaleType="fitCenter"
        android:contentDescription="@string/blue_grey"/>

    <ImageView android:id="@+id/orange_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:src="@drawable/theme_orange_button_normal"
        android:scaleType="fitCenter"
        android:contentDescription="@string/blue_theme"/>

</LinearLayout>
