<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/controls_bg"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/album_artwork"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#2a2a2a"
        android:contentDescription="@string/album_artwork"
        android:scaleType="centerCrop"
        android:src="@drawable/note" />

    <LinearLayout
        android:id="@+id/song_info"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:padding="@dimen/content_padding"
        android:orientation="vertical"
      >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:layout_marginTop="@dimen/small_content_padding"
            android:layout_marginLeft="16dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:layout_marginTop="@dimen/small_content_padding"
            android:layout_marginLeft="16dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />
        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">



            <ImageButton
                android:id="@+id/prev"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selectable_item_background"
                android:contentDescription="@string/prev"
                android:scaleType="center"
                android:src="@drawable/ic_prev_black" />

            <ImageButton
                android:id="@+id/play_pause_toggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selectable_item_background"
                android:contentDescription="@string/play"
                android:scaleType="center"
                android:src="@drawable/ic_play_black" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selectable_item_background"
                android:contentDescription="@string/next"
                android:scaleType="center"
                android:src="@drawable/ic_next_black" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>